# policy-rag-assistant

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml
app/: __init__.py  assistant.py  config.py  main.py
app/evals/: __init__.py  cases.py  cli.py  harness.py  ragas_runner.py
app/ingest/: __init__.py  chunk_cli.py  chunker.py  cli.py  extractor.py  index_cli.py  indexer.py
app/retrieval/: __init__.py  answerer.py  catalog.py  embeddings.py  retriever.py  router.py
app/web/: __init__.py  routes.py  schemas.py
integration_tests/: __init__.py  test_rag_integration.py
scripts/: run_rag_integration_tests.sh
tests/: test_answerer.py  test_app.py  test_assistant.py  test_chunker.py  test_extractor.py  test_indexer.py  test_ragas_runner.py  test_retriever.py  test_router.py
