[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "policy-rag-assistant"
version = "0.1.0"
description = "Demo internal policy assistant powered by retrieval-augmented generation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.0",
    "fastapi>=0.115.0",
    "openai>=1.75.0",
    "pydantic-settings>=2.8.0",
    "pymupdf>=1.25.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
policy-rag-chunk = "app.ingest.chunk_cli:main"
policy-rag-extract = "app.ingest.cli:main"
policy-rag-index = "app.ingest.index_cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.11.0",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
